--- a/RateMyCampus/src/main/resources/application.properties
+++ b/RateMyCampus/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ratemycampus
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.servlet.multipart.max-file-size=3MB
 spring.web.resources.static-locations=file:uploads/
